# campello_physics

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  agents.md  build_examples.sh  run_benchmarks.sh  run_example.sh  todo.md
.github/workflows/: ci-android.yml  ci-ios.yml  ci.yml
bench_cross_engine/: CMakeLists.txt  adapter.h  bullet_adapter.cpp  bullet_adapter.h  campello_adapter.cpp  campello_adapter.h  jolt_adapter.cpp  jolt_adapter.h  main.cpp
cmake/: CompileShaders.cmake  campello_physics-config.cmake.in  campello_physics.pc.in  ios.toolchain.cmake
docs/: Doxyfile  building.md  comparison_project_chrono.md
examples/: CMakeLists.txt
examples/character_controller/: AppDelegate.mm  CMakeLists.txt  Info.plist  ViewController.mm  main.mm
examples/common/: CMakeLists.txt  Camera.hpp  GLBScene.cpp  GLBScene.h
examples/falling_sphere/: AppDelegate.mm  CMakeLists.txt  Info.plist  ViewController.mm
examples/ragdoll/: AppDelegate.mm  CMakeLists.txt  Info.plist  ViewController.mm
examples/vehicle/: AppDelegate.mm  CMakeLists.txt  Info.plist  ViewController.h  ViewController.mm
include/campello_physics/: aabb.h  allocator.h  articulated_body.h  body.h  body_interface.h  body_pool.h  broad_phase.h  buoyancy.h  campello_physics.h  constraint.h  contact.h  debug_draw.h  defines.h  integrator.h  listeners.h  narrow_phase.h  physics_world.h  plane.h  profiler.h  query.h  ragdoll.h  ray.h  shape.h  shapes.h  transform.h  vehicle.h
include/campello_physics/constraints/: ball_socket_constraint.h  d6_constraint.h  distance_constraint.h  fixed_constraint.h  hinge_constraint.h  slider_constraint.h
include/campello_physics/shapes/: box_shape.h  capsule_shape.h  compound_shape.h  convex_hull_shape.h  cylinder_shape.h  height_field_shape.h  sphere_shape.h  triangle_mesh_shape.h
scripts/: build_glsl_shaders.sh  build_hlsl_shaders.bat  build_metal_shaders.sh  build_wasm.sh  parse_cross_engine_bench.py
shaders/glsl/: broadphase_aabb.comp  broadphase_pairs.comp  write_render_transforms.comp  xpbd_contacts.comp  xpbd_finalize.comp  xpbd_predict.comp
shaders/hlsl/: broadphase_aabb.hlsl  broadphase_pairs.hlsl  write_render_transforms.hlsl  xpbd_contacts.hlsl  xpbd_finalize.hlsl  xpbd_predict.hlsl
shaders/msl/: broadphase_aabb.metal  broadphase_pairs.metal  write_render_transforms.metal  xpbd_contacts.metal  xpbd_finalize.metal  xpbd_predict.metal
src/: CMakeLists.txt  physics_world_stub.cpp
src/broadphase/: broad_phase.cpp  dynamic_bvh.cpp  dynamic_bvh.h
src/constraints/: ball_socket_constraint.cpp  constraint_solver.cpp  constraint_utils.h  d6_constraint.cpp  distance_constraint.cpp  fixed_constraint.cpp  hinge_constraint.cpp  slider_constraint.cpp
src/debug/: debug_draw.cpp  physics_debug_draw.cpp
src/dynamics/: body_interface.cpp  body_pool.cpp  integrator.cpp
src/foundation/: allocator.cpp  thread_pool.cpp  thread_pool.h
src/gpu/: gpu_backend.h  gpu_physics_backend.cpp  gpu_physics_backend.h
src/narrowphase/: gjk.cpp  gjk.h  narrow_phase.cpp  narrowphase_utils.h  sat.cpp  sat.h
src/query/: overlap.cpp  raycast.cpp  shape_cast.cpp
src/shaders/glsl/: broadphase_aabb.h  broadphase_pairs.h  write_render_transforms.h  xpbd_contacts.h  xpbd_finalize.h  xpbd_predict.h
src/shaders/hlsl/: broadphase_aabb.h  broadphase_pairs.h  write_render_transforms.h  xpbd_contacts.h  xpbd_finalize.h  xpbd_predict.h
src/shaders/metal/: broadphase_aabb broadphase_pairs xpbd_contacts xpbd_finalize xpbd_predict.h  broadphase_aabb.h  broadphase_pairs.h  write_render_transforms.h  xpbd_contacts.h  xpbd_finalize.h  xpbd_predict.h
src/shapes/: convex_hull_shape.cpp  height_field_shape.cpp  triangle_mesh_shape.cpp
src/world/: articulated_body_system.cpp  articulated_body_system.h  buoyancy_system.cpp  buoyancy_system.h  physics_world.cpp  physics_world_serialization.cpp  ragdoll_factory.cpp  vehicle_system.cpp  vehicle_system.h
tests/: CMakeLists.txt  bench_simulation.cpp  test_articulated_body.cpp  test_body_interface.cpp  test_broadphase.cpp  test_buoyancy.cpp  test_ccd.cpp  test_constraints.cpp  test_debug_draw.cpp  test_dynamics.cpp  test_events.cpp  test_foundation.cpp  test_fuzz.cpp  test_gpu_backend.cpp  test_island_detection.cpp  test_narrowphase.cpp  test_queries.cpp  test_ragdoll.cpp  test_serialization.cpp  test_shapes.cpp  test_stress.cpp  test_vehicle.cpp  test_world.cpp
tools/: sim_vehicle.cpp
